--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,14 +48,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     // Dagger dependencies
-    annotationProcessor "com.google.dagger:dagger-compiler:2.16"
+    kapt "com.google.dagger:dagger-compiler:2.16"
     implementation "com.google.dagger:dagger:2.16"
     implementation "com.google.dagger:dagger-android:2.16"
     implementation "com.google.dagger:dagger-android-support:2.16"
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.16"
+    kapt "com.google.dagger:dagger-android-processor:2.16"
     // Room dependencies
     implementation 'androidx.room:room-runtime:2.0.0-rc01'
-    annotationProcessor 'androidx.room:room-compiler:2.0.0-rc01'
+    kapt 'androidx.room:room-compiler:2.0.0-rc01'
     androidTestImplementation 'androidx.room:room-testing:2.0.0-rc01'
     // Rxjava2 dependencies
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
