--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -50,10 +51,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     // Dagger dependencies
-    kapt "com.google.dagger:dagger-compiler:2.16"
     implementation "com.google.dagger:dagger:2.16"
     implementation "com.google.dagger:dagger-android:2.16"
     implementation "com.google.dagger:dagger-android-support:2.16"
+    kapt "com.google.dagger:dagger-compiler:2.16"
     kapt "com.google.dagger:dagger-android-processor:2.16"
     // Room dependencies
     implementation 'androidx.room:room-runtime:2.0.0-rc01'
